# dest

./: .gitattributes  .gitignore  README.html  README.md  _config.yml  _toc.yml  conf.py  contribute.md  documentation.md  footer.md  generate_toc.sh  index.md  main.html  myst.yml  notebook_gallery.yaml  objects.inv  parse_issue.py  pyproject.toml  requirements.txt  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree  main.doctree
.github/ISSUE_TEMPLATE/: add-cookbook.yml  add-issue.yml
.github/workflows/: add_repo.yml  build_myst_page.yml  integrate_cookbook.yml  publish-book.yml
BSPTEST/: genindex.html  index.html  objects.inv
COOKBOOKBSP/: README.html  index.html
PROBE/: README.html  index.html
VERSUCH/: root.html
_sources/: index.md.txt
_static/: custom.css
cookbooks/: index.html
docs/: README.html  conf.py  genindex.html  index.html  index.md  main.html  objects.inv  search.html  searchindex.js
galleries/: HDA.md  HOOK.md  STACK.md
galleries_by_tag/: tag-access-token.md  tag-authentication.md  tag-avhrr.md  tag-c3s.md  tag-cluster.md  tag-core-api.md  tag-dask.md  tag-digital-twin.md  tag-earthkit.md  tag-ecmwf.md  tag-eodag.md  tag-gfm.md  tag-hda.md  tag-hook.md  tag-http-requests.md  tag-metop.md  tag-olci.md  tag-pyaviso.md  tag-satpy.md  tag-sentinel-3.md  tag-seviri.md  tag-stac.md  tag-stack.md  tag-storage.md  tag-token.md  tag-workflow.md
jupyter_execute/: root.ipynb
scripts/: build_myst_yml.py  clone_sync_repos.py  gallery_keywords.py  generate_gallery_md.py  indexbutton.py  parse_issue.py
(+303 files in other folders)
