[project]
authors = [{name = "Christoph Reimer", email = "christoph.reimer@eodc.eu"}]
dependencies = []
description = "Add a short description here"
name = "notebook_gallery"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.system-requirements]
libc = {version = "2.27"}

[tool.pixi.pypi-dependencies]
notebook_gallery = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = ">=3.12.0,<3.13"
sphinx-book-theme = ">=1.1.3,<2"
myst-nb = ">=1.1.2,<2"
sphinx-design = ">=0.6.1,<0.7"
pyyaml = ">=6.0.2,<7"
ghp-import = ">=2.1.0,<3"